--- a/03_load/03_load.ipynb
+++ b/03_load/03_load.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>601</td>\n",
+       "      <td>00601</td>\n",
        "      <td>17242</td>\n",
        "      <td>40.5</td>\n",
        "      <td>13092.0</td>\n",
@@ -110,7 +110,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>602</td>\n",
+       "      <td>00602</td>\n",
        "      <td>38442</td>\n",
        "      <td>42.3</td>\n",
        "      <td>16358.0</td>\n",
@@ -120,7 +120,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>603</td>\n",
+       "      <td>00603</td>\n",
        "      <td>48814</td>\n",
        "      <td>41.1</td>\n",
        "      <td>16603.0</td>\n",
@@ -130,7 +130,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>606</td>\n",
+       "      <td>00606</td>\n",
        "      <td>6437</td>\n",
        "      <td>43.3</td>\n",
        "      <td>12832.0</td>\n",
@@ -140,7 +140,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>610</td>\n",
+       "      <td>00610</td>\n",
        "      <td>27073</td>\n",
        "      <td>42.1</td>\n",
        "      <td>19309.0</td>\n",
@@ -153,12 +153,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
-       "0  601       17242        40.5                  13092.0             6999.0   \n",
-       "1  602       38442        42.3                  16358.0             9277.0   \n",
-       "2  603       48814        41.1                  16603.0            11307.0   \n",
-       "3  606        6437        43.3                  12832.0             5943.0   \n",
-       "4  610       27073        42.1                  19309.0            10220.0   \n",
+       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "0  00601       17242        40.5                  13092.0             6999.0   \n",
+       "1  00602       38442        42.3                  16358.0             9277.0   \n",
+       "2  00603       48814        41.1                  16603.0            11307.0   \n",
+       "3  00606        6437        43.3                  12832.0             5943.0   \n",
+       "4  00610       27073        42.1                  19309.0            10220.0   \n",
        "\n",
        "   poverty_count  unemployment_count  \n",
        "0          10772                2316  \n",
@@ -168,7 +168,7 @@
        "4          11724                1290  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,11 +189,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>restaurant_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Taco Bell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Arby's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Steak 'n Shake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Wendy's</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   restaurant_id restaurant_name\n",
+       "0              1  SONIC Drive In\n",
+       "1              2       Taco Bell\n",
+       "2              3          Arby's\n",
+       "3              4  Steak 'n Shake\n",
+       "4              5         Wendy's"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_df = pd.read_csv(\"../02_transform_restaurant/restaurant_id.csv\")\n",
+    "restaurant_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "restaurant_df = pd.read_csv(\"../02_transform_restaurant/restaurant_id.csv\", dtype=)"
+    "restaurant_df.to_sql(name='restaurant', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>70301</td>\n",
+       "      <td>Thibodaux</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37863</td>\n",
+       "      <td>Pigeon Forge</td>\n",
+       "      <td>TN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30260</td>\n",
+       "      <td>Morrow</td>\n",
+       "      <td>GA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48204</td>\n",
+       "      <td>Detroit</td>\n",
+       "      <td>MI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48235</td>\n",
+       "      <td>Detroit</td>\n",
+       "      <td>MI</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  zip_code          city state\n",
+       "0    70301     Thibodaux    LA\n",
+       "1    37863  Pigeon Forge    TN\n",
+       "2    30260        Morrow    GA\n",
+       "3    48204       Detroit    MI\n",
+       "4    48235       Detroit    MI"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_code_df = pd.read_csv(\"../02_transform_restaurant/zip_code.csv\", dtype='str')\n",
+    "zip_code_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_df.to_sql(name='zip_code', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>street_no</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>zip_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>800</td>\n",
+       "      <td>N Canal Blvd</td>\n",
+       "      <td>70301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>124</td>\n",
+       "      <td>John R Rd</td>\n",
+       "      <td>48083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>909</td>\n",
+       "      <td>N Wood</td>\n",
+       "      <td>75644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Gateway Blvd</td>\n",
+       "      <td>82901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6557</td>\n",
+       "      <td>S Staples St</td>\n",
+       "      <td>78413</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   restaurant_id street_no   street_name zip_code\n",
+       "0              1       800  N Canal Blvd    70301\n",
+       "1              1       124     John R Rd    48083\n",
+       "2              1       909        N Wood    75644\n",
+       "3              1        97  Gateway Blvd    82901\n",
+       "4              1      6557  S Staples St    78413"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_address_df = pd.read_csv(\"../02_transform_restaurant/restaurant_address.csv\", dtype={'zip_code': 'str'})\n",
+    "restaurant_address_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restaurant_address_df.to_sql(name='restaurant_address', con=engine, if_exists=\"append\", index=False)"
    ]
   },
   {
@@ -201,9 +474,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pd.read_csv(\"../02_transform_restaurant\")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
