To figure out errors in zcta table

--- a/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
+++ b/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
@@ -450,6 +450,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33166"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_to_zcta_df['ZCTA'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
