working on restaurant id issue

--- a/02_transform_restaurant/02_transform_restaurant_rouhong_kat-Copy1.ipynb
+++ b/02_transform_restaurant/02_transform_restaurant_rouhong_kat-Copy1.ipynb
@@ -866,16 +866,6 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export restaurant data to CSV\n",
-    "restaurant_clean_df.to_csv('restaurant_clean.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -893,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +975,7 @@
        "5     Grand River Ave  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1075,7 @@
        "4         Wendy's              9768     Grand River Ave    48204"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1096,7 @@
        "(9343, 4)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,110 +1308,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create restaurant ID\n",
-    "restaurant_names_df.index.name='restaurant_id'"
+    "restaurant_names_df.reset_index(drop=True, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>restaurant_name</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>restaurant_id</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SONIC Drive In</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Taco Bell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Arby's</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Steak 'n Shake</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Wendy's</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              restaurant_name\n",
-       "restaurant_id                \n",
-       "0              SONIC Drive In\n",
-       "2                   Taco Bell\n",
-       "3                      Arby's\n",
-       "4              Steak 'n Shake\n",
-       "5                     Wendy's"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "restaurant_names_df.head()"
+    "# Create restaurant ID\n",
+    "restaurant_names_df.index.name='restaurant_id'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace restaurant names in restaurant address table with restaurant_id > use merge \n",
-    "#restaurant_address_df['restaurant__name_id'] = restaurant_names_df.lookup(restaurant_names_df.index, restaurant_names_df['restaurant_name'])"
+    "restaurant_names_df['restaurant_id']=restaurant_names_df.index"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "restaurant_names_df['id']=restaurant_names_df.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1445,7 +1357,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>restaurant_name</th>\n",
-       "      <th>id</th>\n",
+       "      <th>restaurant_id</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>restaurant_id</th>\n",
@@ -1460,40 +1372,40 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>Taco Bell</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arby's</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Arby's</td>\n",
+       "      <td>Steak 'n Shake</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Steak 'n Shake</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>Wendy's</td>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              restaurant_name  id\n",
-       "restaurant_id                    \n",
-       "0              SONIC Drive In   0\n",
-       "2                   Taco Bell   2\n",
-       "3                      Arby's   3\n",
-       "4              Steak 'n Shake   4\n",
-       "5                     Wendy's   5"
+       "              restaurant_name  restaurant_id\n",
+       "restaurant_id                               \n",
+       "0              SONIC Drive In              0\n",
+       "1                   Taco Bell              1\n",
+       "2                      Arby's              2\n",
+       "3              Steak 'n Shake              3\n",
+       "4                     Wendy's              4"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,35 +1416,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test_one = pd.merge(restaurant_names_df, restaurant_address_df,left_on=\"restaurant_name\", right_on=\"restaurant_name\")\n",
+    "#test_one = pd.join(restaurant_names_df, restaurant_address_df,left_on=\"restaurant_name\", right_on=\"restaurant_name\")\n",
     "\n",
-    "inner_join = pd.merge(restaurant_address_df, restaurant_names_df,  \n",
-    "                      on ='restaurant_name',  \n",
-    "                      how ='inner')"
+    "inner_join = pd.merge(restaurant_address_df, restaurant_names_df,on ='restaurant_name', how ='right')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_name</th>\n",
+       "      <th>street_address_no</th>\n",
+       "      <th>street_address_name</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>restaurant_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>800</td>\n",
+       "      <td>N Canal Blvd</td>\n",
+       "      <td>70301</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>124</td>\n",
+       "      <td>John R Rd</td>\n",
+       "      <td>48083</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>909</td>\n",
+       "      <td>N Wood</td>\n",
+       "      <td>75644</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Gateway Blvd</td>\n",
+       "      <td>82901</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>6557</td>\n",
+       "      <td>S Staples St</td>\n",
+       "      <td>78413</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(9343, 5)"
+       "  restaurant_name street_address_no street_address_name zip_code  \\\n",
+       "0  SONIC Drive In               800        N Canal Blvd    70301   \n",
+       "1  SONIC Drive In               124           John R Rd    48083   \n",
+       "2  SONIC Drive In               909              N Wood    75644   \n",
+       "3  SONIC Drive In                97        Gateway Blvd    82901   \n",
+       "4  SONIC Drive In              6557        S Staples St    78413   \n",
+       "\n",
+       "   restaurant_id  \n",
+       "0              0  \n",
+       "1              0  \n",
+       "2              0  \n",
+       "3              0  \n",
+       "4              0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#restaurant_address_df_test = restaurant_address_df.merge(restaurant_names_df, on='restaurant_name', how=\"right\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#restaurant_address_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#restaurant_address_df.astype('object').dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_name</th>\n",
+       "      <th>street_address_no</th>\n",
+       "      <th>street_address_name</th>\n",
+       "      <th>zip_code</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>resturant_address_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>800</td>\n",
+       "      <td>N Canal Blvd</td>\n",
+       "      <td>70301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Taco Bell</td>\n",
+       "      <td>206</td>\n",
+       "      <td>Wears Valley Rd</td>\n",
+       "      <td>37863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arby's</td>\n",
+       "      <td>3652</td>\n",
+       "      <td>Parkway</td>\n",
+       "      <td>37863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Steak 'n Shake</td>\n",
+       "      <td>2118</td>\n",
+       "      <td>Mt Zion Parkway</td>\n",
+       "      <td>30260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Wendy's</td>\n",
+       "      <td>9768</td>\n",
+       "      <td>Grand River Ave</td>\n",
+       "      <td>48204</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     restaurant_name street_address_no street_address_name  \\\n",
+       "resturant_address_id                                                         \n",
+       "0                     SONIC Drive In               800        N Canal Blvd   \n",
+       "1                          Taco Bell               206     Wears Valley Rd   \n",
+       "2                             Arby's              3652             Parkway   \n",
+       "3                     Steak 'n Shake              2118     Mt Zion Parkway   \n",
+       "4                            Wendy's              9768     Grand River Ave   \n",
+       "\n",
+       "                     zip_code  \n",
+       "resturant_address_id           \n",
+       "0                       70301  \n",
+       "1                       37863  \n",
+       "2                       37863  \n",
+       "3                       30260  \n",
+       "4                       48204  "
+      ]
+     },
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inner_join.shape"
+    "restaurant_address_df.head()"
    ]
   },
   {
@@ -1540,8 +1664,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "restaurant_address_df.head()"
+    "#restaurant_address_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export restaurant data to CSV\n",
+    "#restaurant_clean_df.to_csv('restaurant_clean.csv', index=False)"
    ]
   }
  ],
