--- a/03_load/03_load_TRACEY.ipynb
+++ b/03_load/03_load_TRACEY.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "engine.table_names()"
    ]
@@ -64,115 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
-       "      <th>population</th>\n",
-       "      <th>median_age</th>\n",
-       "      <th>median_household_income</th>\n",
-       "      <th>per_capita_income</th>\n",
-       "      <th>poverty_count</th>\n",
-       "      <th>unemployment_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00601</td>\n",
-       "      <td>17242</td>\n",
-       "      <td>40.5</td>\n",
-       "      <td>13092.0</td>\n",
-       "      <td>6999.0</td>\n",
-       "      <td>10772</td>\n",
-       "      <td>2316</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00602</td>\n",
-       "      <td>38442</td>\n",
-       "      <td>42.3</td>\n",
-       "      <td>16358.0</td>\n",
-       "      <td>9277.0</td>\n",
-       "      <td>19611</td>\n",
-       "      <td>1927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00603</td>\n",
-       "      <td>48814</td>\n",
-       "      <td>41.1</td>\n",
-       "      <td>16603.0</td>\n",
-       "      <td>11307.0</td>\n",
-       "      <td>24337</td>\n",
-       "      <td>3124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00606</td>\n",
-       "      <td>6437</td>\n",
-       "      <td>43.3</td>\n",
-       "      <td>12832.0</td>\n",
-       "      <td>5943.0</td>\n",
-       "      <td>4163</td>\n",
-       "      <td>230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00610</td>\n",
-       "      <td>27073</td>\n",
-       "      <td>42.1</td>\n",
-       "      <td>19309.0</td>\n",
-       "      <td>10220.0</td>\n",
-       "      <td>11724</td>\n",
-       "      <td>1290</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
-       "0  00601       17242        40.5                  13092.0             6999.0   \n",
-       "1  00602       38442        42.3                  16358.0             9277.0   \n",
-       "2  00603       48814        41.1                  16603.0            11307.0   \n",
-       "3  00606        6437        43.3                  12832.0             5943.0   \n",
-       "4  00610       27073        42.1                  19309.0            10220.0   \n",
-       "\n",
-       "   poverty_count  unemployment_count  \n",
-       "0          10772                2316  \n",
-       "1          19611                1927  \n",
-       "2          24337                3124  \n",
-       "3           4163                 230  \n",
-       "4          11724                1290  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "census_df = pd.read_csv(\"../02_transform_census/clean_census.csv\", dtype={'ZCTA': 'str'})\n",
     "census_df.head()"
@@ -180,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,78 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>restaurant_id</th>\n",
-       "      <th>restaurant_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>SONIC Drive In</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Taco Bell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Arby's</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Steak 'n Shake</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Wendy's</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   restaurant_id restaurant_name\n",
-       "0              1  SONIC Drive In\n",
-       "1              2       Taco Bell\n",
-       "2              3          Arby's\n",
-       "3              4  Steak 'n Shake\n",
-       "4              5         Wendy's"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "restaurant_df = pd.read_csv(\"../02_transform_restaurant/restaurant_id.csv\")\n",
     "restaurant_df.head()"
@@ -268,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,272 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zip_code</th>\n",
-       "      <th>ZCTA</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00501</td>\n",
-       "      <td>11742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00544</td>\n",
-       "      <td>11742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00601</td>\n",
-       "      <td>00601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00602</td>\n",
-       "      <td>00602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00603</td>\n",
-       "      <td>00603</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  zip_code   ZCTA\n",
-       "0    00501  11742\n",
-       "1    00544  11742\n",
-       "2    00601  00601\n",
-       "3    00602  00602\n",
-       "4    00603  00603"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')\n",
-    "zcta_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zcta_df.to_sql(name=\"zcta\", con=engine, if_exists=\"append\", index=False)"
+    "zip_zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zip_code</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>70301</td>\n",
-       "      <td>Thibodaux</td>\n",
-       "      <td>LA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>37863</td>\n",
-       "      <td>Pigeon Forge</td>\n",
-       "      <td>TN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30260</td>\n",
-       "      <td>Morrow</td>\n",
-       "      <td>GA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>48204</td>\n",
-       "      <td>Detroit</td>\n",
-       "      <td>MI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>48235</td>\n",
-       "      <td>Detroit</td>\n",
-       "      <td>MI</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  zip_code          city state\n",
-       "0    70301     Thibodaux    LA\n",
-       "1    37863  Pigeon Forge    TN\n",
-       "2    30260        Morrow    GA\n",
-       "3    48204       Detroit    MI\n",
-       "4    48235       Detroit    MI"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zip_code_df = pd.read_csv(\"../02_transform_restaurant/zip_code.csv\", dtype='str')\n",
-    "zip_code_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "zip_code_df.to_sql(name='zip_code', con=engine, if_exists=\"append\", index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>restaurant_id</th>\n",
-       "      <th>street_no</th>\n",
-       "      <th>street_name</th>\n",
-       "      <th>zip_code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>800</td>\n",
-       "      <td>N Canal Blvd</td>\n",
-       "      <td>70301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>124</td>\n",
-       "      <td>John R Rd</td>\n",
-       "      <td>48083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>909</td>\n",
-       "      <td>N Wood</td>\n",
-       "      <td>75644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>97</td>\n",
-       "      <td>Gateway Blvd</td>\n",
-       "      <td>82901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6557</td>\n",
-       "      <td>S Staples St</td>\n",
-       "      <td>78413</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   restaurant_id street_no   street_name zip_code\n",
-       "0              1       800  N Canal Blvd    70301\n",
-       "1              1       124     John R Rd    48083\n",
-       "2              1       909        N Wood    75644\n",
-       "3              1        97  Gateway Blvd    82901\n",
-       "4              1      6557  S Staples St    78413"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "restaurant_address_df = pd.read_csv(\"../02_transform_restaurant/restaurant_address.csv\", dtype={'zip_code': 'str'})\n",
     "restaurant_address_df.head()"
@@ -550,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,78 +126,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zip_code</th>\n",
-       "      <th>ZCTA</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00501</td>\n",
-       "      <td>11742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00544</td>\n",
-       "      <td>11742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00601</td>\n",
-       "      <td>00601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00602</td>\n",
-       "      <td>00602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00603</td>\n",
-       "      <td>00603</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  zip_code   ZCTA\n",
-       "0    00501  11742\n",
-       "1    00544  11742\n",
-       "2    00601  00601\n",
-       "3    00602  00602\n",
-       "4    00603  00603"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "zip_zcta_df = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zcta_df.to_sql(name=\"zcta\", con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_df = pd.read_csv(\"../02_transform_restaurant/zip_code.csv\", dtype='str')\n",
+    "zip_code_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_df.to_sql(name='zip_code', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')\n",
     "zcta_df.head()"
